@@ -1,4 +1,3 @@
-import java.security.cert.Extension;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -7,8 +6,8 @@ public class Epic extends Task {
 
     private final List<Subtask> subtasks;
 
-    public Epic(String title, String description, Extension task1) {
-        super(task1.getId(), title, description, TaskStatus.NEW);
+    public Epic(String title, String description) {
+        super(title, description);
         this.subtasks = new ArrayList<>();
     }
 
@@ -20,13 +19,28 @@ public class Epic extends Task {
         return subtasks;
     }
 
+    public void updateStatus() {
+        if (subtasks.isEmpty()) {
+            setStatus(TaskStatus.NEW);
+            return;
+        }
+        boolean allDone = subtasks.stream().allMatch(subtask -> subtask.getStatus() == TaskStatus.DONE);
+        boolean anyInProgress = subtasks.stream().anyMatch(subtask -> subtask.getStatus() == TaskStatus.IN_PROGRESS);
+
+        if (allDone) {
+            setStatus(TaskStatus.DONE);
+        } else if (anyInProgress) {
+            setStatus(TaskStatus.IN_PROGRESS);
+        } else {
+            setStatus(TaskStatus.NEW);
+        }
+    }
 
     @Override
     public String toString() {
         return "Epic{" +
-                "subtasks=" + subtasks.stream().map(Subtask::getId).toList() +
-                ", title='" + getTitle() + '\''
-                +
+                "subtasks=" + subtasks.stream().map(Subtask::getId).collect(Collectors.toList()) +
+                ", title='" + getTitle() + '\'' +
                 ", id=" + getId() +
                 ", status=" + getStatus() +
                 '}';
