@@ -1,19 +1,18 @@
 import java.util.ArrayList;
-
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history = new ArrayList<>();
-
-    private static final int MAX_HISTORY_SIZE = 10;
+    private final List<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() >= MAX_HISTORY_SIZE) {
-            history.removeFirst();
+        if (task != null) {
+            history.add(task);
+            if (history.size() > 10) {
+                history.remove(0);
+            }
         }
-        history.add(task);
-
     }
 
     @Override
